--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'java'
 //apply plugin: 'eclipse'
 //apply plugin: 'idea'
 apply plugin: 'spring-boot'
+//apply plugin: 'war'
 
 jar {
     baseName = 'gs-rest-service'
