--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-server.port = 8102
+#server.port = 8102
+server.port = 80
 servlet.container.maxThreads = 50
 #server.ssl.key-store=classpath:keystore.jks
 #server.ssl.key-store-password=password
